--- a/bindings/cpp/doc-footer.html
+++ b/bindings/cpp/doc-footer.html
@@ -1,15 +1,13 @@
 <div style="padding-left: 20px">
-  <div style="float: left; font-size: 12px">
-  The official SDK for <a href="https://www.eva-ics.com/">EVA ICS</a>
+  <div style="font-size: 12px">
+    The official SDK for <a href="https://www.eva-ics.com/">EVA ICS</a>
   </div>
-  <div style="float: left; margin-left: 20px; font-size: 12px">
+  <div style="font-size: 12px">
     Technical documentation: <a href="https://info.bma.ai/en/actual/eva4/sdk/cpp/">https://info.bma.ai/en/actual/eva4/sdk/cpp/</a>
   </div>
-  </p>
-</div>
-<div>
-  <div align="right" style="margin-right: 50px">
+  <div style="font-size: 12px; margin-top: 20px">
     &copy;
     <a href="https://www.bohemia-automation.com/">Bohemia Automation</a> /
     <a href="https://www.altertech.com">Altertech</a>
   </div>
+</div>
