--- a/misc/va_index.html
+++ b/misc/va_index.html
@@ -75,6 +75,7 @@ a:visited { color: #29AAE1 }
     </div>
     <script type="text/javascript">
       const vendored_apps = [
+        {id:"opcentre",name:"Operation centre"},
         {id:"sdash",name:"System dashboard"},
       ];
       const va_el = document.getElementById("va");
